removed deprecated .newInstance method call
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>